--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,14 @@
   "homepage": "https://github.com/pqv199x/reveal-private-key#readme",
   "dependencies": {
     "bip39": "^3.0.2",
+    "bitcoinjs-lib": "^5.1.10",
     "commander": "^5.1.0",
     "ethereum-public-key-to-address": "0.0.2",
     "ethers": "^5.0.2",
     "hdkey": "^2.0.1",
     "inquirer": "^7.2.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.4"
   }
 }
