--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.10",
     "commander": "^5.1.0",
+    "elliptic": "^6.5.3",
     "ethereum-public-key-to-address": "0.0.2",
     "ethers": "^5.0.2",
     "hdkey": "^2.0.1",
-    "inquirer": "^7.2.0"
+    "inquirer": "^7.2.0",
+    "tronweb": "^2.10.2"
   },
   "devDependencies": {
     "jsdoc": "^3.6.4"
