--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "homepage": "https://github.com/pqv199x/show-key.git#readme",
   "dependencies": {
-    "@solana/web3.js": "^0.78.3",
+    "@solana/web3.js": "^1.9.0",
     "bip32": "^2.0.6",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.10",
     "bs58": "^4.0.1",
     "commander": "^5.1.0",
+    "ed25519-hd-key": "^1.2.0",
     "elliptic": "^6.5.3",
     "ethereum-public-key-to-address": "0.0.2",
     "ethers": "^5.0.2",
